# onbase

./: .gitignore  docker-compose.yml  readme.md
client/: index.html  player.html  readme.md  run.sh  team.html
data/: fetcher.py  models.py
search/: onbase-search.cabal
search/data/: players.csv  teams.csv
search/src/: Main.hs
search/src/onbase/: DB.hs  DBTypes.hs  DateParser.hs  Lexicon.hs  Search.hs  SearchResult.hs
