name:                onbase-search
version:             0.1.0.0
license-file:        LICENSE
author:              Ted Kornish
build-type:          Simple
cabal-version:       >=1.10

executable onbase-search
  main-is:             Main.hs
  build-depends:
    base >=4.8 && <4.9,
    containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-unused-binds
